[package]
name = "chai-tea"
version = "0.1.0"
edition = "2024"
authors = ["Ryan-David Reyes <ryan.david.reyes@gmail.com>"]
description = "A minimal Elm-style architecture for egui/eframe apps."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ryry0/chai-tea-rs"
keywords = ["elm", "egui", "eframe", "architecture", "tea", "chai"]
categories = ["gui", "architecture", "framework"]


[dependencies]
eframe = "0.33.0"
