[package]
name = "chai-tea"
version = "0.2.0"
edition = "2024"
authors = ["Ryan-David Reyes <ryan.david.reyes@gmail.com>"]
description = "A minimal Elm-style architecture for egui/eframe apps."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ryry0/chai-tea-rs"
keywords = ["elm", "egui", "eframe", "architecture", "tea"]
categories = ["gui"]


[dependencies]
eframe = "0.33.0"

[dev-dependencies.scraper]
version = "0.24.0"

[dev-dependencies.reqwest]
version = "0.12.23"
features = ["json"]

[dev-dependencies.tokio]
version = "1.47.1"
features = ["full"]
